src/Css/App.css
/* ... */
::-webkit-scrollbar {
  width: 0.6rem;
  height: 0.1rem;
  background-color: #0d1117;
}

::-webkit-scrollbar-thumb {
  padding: 3px;
  background-color: rgb(113, 117, 121);
  border-radius: 9em;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #3399ff;
}

.buttonUpContainer {
  transition: all 200ms ease-out;
  margin: 5%;
  text-align: center;
  position: fixed;
  right: 0;
  bottom: 0;
}
.buttonUp {
  transition: 0.3s;
  opacity: 0.8;
}
.buttonUp:hover {
  opacity: 1;
}

.footer{
  display: flex;
  justify-content: space-between;
  border-top: 1px solid #4f5151;
}
.footer p{
  padding: 0 1em;
  font-size: 12px;
}
.extraInformation{
  position: relative;
  border: 1px solid #3399ff;
  border-radius: 10px;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.extraInformation p {
  padding: 0.5em 0.5em;
}
.extraInformation h2, h3{
  padding: 0 0.5rem;
}
.extraInformationHeader{
  position: absolute;
  top: -2.2em;
  background: #0d1117;
  left: 1em;
  color: #3399ff;
}


.powerUnitPowerCalculator {
  display: inline-block;
}
.powerUnitPowerCalculatorOptions {
  width: 16rem;
  padding: 0.3rem;
  margin: 0.4rem 1rem 0.4rem 0;
  border: 0;
  border-bottom: 4px solid #3399ff;
}
.powerUnitPowerCalculatorSubmit {
  margin-top: 30px;
  padding: 10px 12px;
  color: #dddddd;
  background: #24292f;
  border-radius: 5px;
  border: none;
  transition: 0.3s;
}
.powerUnitPowerCalculatorSubmit:hover {
  -webkit-box-shadow: 0px 5px 5px -5px #3399ff;
  -moz-box-shadow: 0px 5px 5px -5px #3399ff;
  box-shadow: 0px 5px 5px -5px #3399ff;
  transform: translate(0, -2px);
}
.powerUnitsPowerCount {
  color: #3399ff;
}


.postLink {
  position: relative;
  color: #3399ff;
  text-decoration: none;
  transition: 0.2ms;
}
.postLink:hover {
  text-decoration: underline #ddd;
}
.postIcon{
  position: absolute;
  left: -1.7em;
  top: 0.2em;
  opacity: 0.6;
}
.postLink:hover .postIcon{
  opacity: 1;
}

.linkToTheOtherWebsite {
  justify-content: center;
  color: #3399ff;
  text-decoration: none;
  transition: 0.2ms;
}
.linkToTheOtherWebsite:hover {
  text-decoration: underline #ddd;
}
.linkIcon {
  opacity: 0.6;
  padding-right: 0.1em;
}
.linkToTheOtherWebsite:hover .linkIcon {
  opacity: 1;
}
/* ... */

